--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5YD59QXYF5"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-5YD59QXYF5');
+    </script>
+    
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -8,8 +18,8 @@
       <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Share My Syllabus helps students preview course materials before enrolling—no biased reviews, just real syllabi. Get insights into class content, expectations, and workload before you commit!" />
-    <title>Share My Syllabus</title>
+    <meta name="description" content="Share Syllabus helps students preview course materials before enrolling—no biased reviews, just real syllabi. Get insights into class content, expectations, and workload before you commit!" />
+    <title>Share Syllabus</title>
   </head>
   <body>
     <div id="root"></div>
